[package]
name = "did_i_break_it"
version = "0.6.0"
authors = ["DeveloperC <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
description = "A tooling for checking your https://crates.io library's reverse dependencies with your local version."
repository = "https://gitlab.com/DeveloperC/did_i_break_it"
readme = "README.md"
keywords = ["library", "breaking", "semantic", "versioning", "change"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# For CLI parsing.
structopt = "0.3.25"

# For logging.
log = "0.4.14"
pretty_env_logger = "0.4.0"

# For reading Cargo.toml files.
cargo_toml = "0.10.2"

# For Semantic Versioning parsing.
semver = "1.0.4"

# For defining a static HTTP client.
lazy_static = "1.4.0"

# For making HTTP requests to the crates.io API.
reqwest = { version = "0.11.7", features = ["blocking"] }
http = "0.2.5"
url = "2.2.2"

# For parsing crates.io's API responses.
serde = "1.0.132"
serde_json = "1.0.73"

# For fancy console output.
console = "0.15.0"

# For multiple threads.
rayon = "1.5.1"


[dev-dependencies]
# For snapshot testing.
insta = "1.8.0"


[profile.release]
lto = 'fat'
codegen-units = 1
