[package]
name = "did_i_break_it"
version = "0.6.0"
authors = ["DeveloperC <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
description = "A tooling for checking your https://crates.io library's reverse dependencies with your local version."
repository = "https://gitlab.com/DeveloperC/did_i_break_it"
readme = "README.md"
keywords = ["library", "breaking", "semantic", "versioning", "change"]
categories = ["command-line-utilities", "development-tools", "config", "simulation", "api-bindings"]


[dependencies]
# For CLI parsing.
structopt = "0.3.26"

# For logging.
log = "0.4.17"
pretty_env_logger = "0.4.0"

# For reading Cargo.toml files.
cargo_toml = "0.15.1"

# For Semantic Versioning parsing.
semver = "1.0.16"

# For defining a static HTTP client.
lazy_static = "1.4.0"

# For making HTTP requests to the crates.io API.
reqwest = { version = "0.11.14", features = ["blocking"] }
http = "0.2.8"
url = "2.3.1"

# For parsing crates.io's API responses.
serde = "1.0.152"
serde_json = "1.0.93"

# For fancy console output.
console = "0.15.5"

# For multiple threads.
rayon = "1.6.1"


[dev-dependencies]
# For snapshot testing.
insta = "1.28.0"


[profile.release]
lto = 'fat'
codegen-units = 1
